--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,25 @@
 {
   "name": "talience-server",
-  "dependencies": {}
+  "version": "1.0.0",
+  "description": "Express server for the Talience AI interviewing agent",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "lint": "eslint ."
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "openai": "^4.49.0",
+    "twilio": "^4.21.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-node": "^11.1.0",
+    "nodemon": "^3.1.4"
+  }
 }
